--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!-- Font Awesome para ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-yU7mHn0+9TVcRQZJK3kXmWGHYdYmQ8X6G0XxKv9kNiyuLlRbeD7TeMCKkS28EzhtUsx0fp2/c3PtK+6mJw5ewA==" crossorigin="anonymous" referrerpolicy="no-referrer"
+  />
+
     <!-- Script JavaScript para funcionalidades interativas -->
     <script src="script.js"></script>
 </head>
@@ -93,7 +96,7 @@
                     
                     <!-- Card 2: Objetivo Principal -->
                     <div class="content-item">
-                        <i class="fas fa-target icon"></i>
+                        <i class="fa-solid fa-bullseye icon"></i>
                         <h3>Objetivo Principal</h3>
                         <p>O objetivo principal é aumentar o número de pacientes e terapeutas, expandindo o impacto da @linkpsicologia na comunidade. Para isso, é fundamental otimizar a presença online, qualificando leads e estabelecendo um fluxo contínuo de aquisição.</p>
                     </div>
